--- a/PerfectPrediction/StyleSheet.css
+++ b/PerfectPrediction/StyleSheet.css
@@ -102,10 +102,14 @@ body {
 }
 
     .form .label {
-        width: var(--input-width);
+        width: 300px;
         display: inline-block;
         text-align: right;
     }
+
+        .form .label:after {
+            content: ":\00a0";
+        }
 
     .form input[type="text"] {
         font-size: var(--form-font-size);
@@ -131,3 +135,32 @@ body {
     .StaticMenuItemStyle:nth-of-type(n + 1)::before {
         content: " | ";
     }
+
+.watermark {
+    color: #9f9f9f;
+}
+
+.disclaimer {
+    font-size: 0.6em;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#btnSubmit {
+    font-size: var(--form-font-size);
+    padding: 5px;
+}
+
+@media only screen and (max-width: 430px) {
+    .label {
+        text-align: left !important;
+        width: 300px !important;
+    }
+
+    input {
+        width: 300px !important;
+    }
+}
